# dbt-server

./: .gitignore  .poetryignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  Taskfile.dist.yaml  catalog-info.yaml  deploy.sh  mkdocs.yml  pyproject.toml
.github/actions/docker/: setup.yml
.github/actions/poetry/: action.yml  install.yml
.github/workflows/: api-workflow.yml  dbt-remote-workflow.yml  dbt-server-workflow.yml  deploy_docs.yaml  github-actions-pytest.yml  package-publication.yml  release.yml
.skaff/: skaff.yaml
api/: .env.client  .env.local_server  .env.server  Dockerfile  Dockerfile.server  README.md  app.py  client.py  clients.py  cloud_storage.py  cloudbuild.yml  command_processor.py  config.py  dbt-server.py  dbt_run_job.py  dbt_server.py  dbt_types.py  elementary_report.py  firestore.py  job.py  job_old.py  lab_logger.py  metadata.py  new_logger.py  profiles.yml  requirements.server.txt  requirements.txt  state.py  test_pytest.py  utils.py
api/lib/: cloud_storage.py  command_processor.py  dbt_classes.py  firestore.py  job.py  logger.py  metadata_document.py  set_environment.py  state.py
api/test/: test_dbt_run_job.py  test_dbt_server.py  test_dbt_server_integration.py  test_pytest.py
api/test/lib/: test_cloud_storage.py  test_command_processor.py  test_set_environment.py  test_state.py  test_state_integration.py
api/tests/: conftest.py  test_dbt_run_job.py
api/tests/integration/: test_cloud_storage_integration.py  test_dbt_server_integration.py  test_state_integration.py
api/tests/unit/: test_dbt_server.py
awspy/: README.md  app.py
awspy/auth/: auth.py  main.py
awspy/awspy/: awspy_stack.py
awspy/lambda/: dbtauth.py
awspy/proxy/: Dockerfile  nginx.conf.template
cli/: .env  README.md  classes.py  cli.py  gcp.py  main.py  params.py  remote_server.py  requires.py  server.py  setup.py  utils.py  version.py
cli/cloud_providers/: google.py  local.py
cli/dbt_remote.egg-info/: PKG-INFO  entry_points.txt
dbt-remote/: setup.py
dbt-remote/dbt_remote.egg-info/: SOURCES.txt  requires.txt
dbt-remote/tests/: test_cli.py
dbt-server/: Dockerfile
dbt-server/lib/: server_default_config.yml  set_environment.py
dbt-server/tests/: conftest.py
dbt_remote/: __init__.py  cli.py
dbt_remote/src/: cli_input.py  cli_local_config.py  cli_params.py  cli_schedules.py  cli_utils.py  dbt_server.py  dbt_server_detector.py  dbt_server_image.py
dbt_remote/tests/: conftest.py  test_cli.py  test_dbt_server_detector.py  test_stream_logs.py
dbt_server/: Dockerfile  README.md  dbt_run_job.py  dbt_server.py  requirements.txt  server.py
dbt_server/lib/: cloud_scheduler.py  cloud_storage.py  command_processor.py  dbt_classes.py  dbt_cloud_run_job.py  dbt_command.py  firestore.py  gcs.py  logger.py  server_default_config.yml  set_environment.py  state.py
dbt_server/templates/: home.html
dbt_server/tests/: conftest.py
dbtr/cli/: exceptions.py  main.py  params.py  remote_server.py  requires.py  schedule.py  utils.py  version.py
dbtr/common/: job.py  project.py  remote_server.py  schedule.py
dbtr/server/: Dockerfile  config.py  main.py  requirements.txt  startup.sh  version.py
dbtr/ui/: job_with_status.py  main.py  run_logs.py  server_utils.py  sidebar.py
docker/: azure.Dockerfile  gcp.Dockerfile  local.Dockerfile  package.Dockerfile
docs/: advanced.md  contributing.md  dbt_remote.md  dbt_server.md  explanation.md  index.md
jaffle-shop/: dbt_project.yml
jaffle-shop-elementary/: dbt_project.yml  package-lock.yml  packages.yml
package/: README.md  pyproject.toml
package/src/dbt_remote/: cli.py  config_command.py  dbt_server_detector.py  stream_logs.py
package/src/dbt_remote_cli/: cli.py  dbt_server_detector.py  server_response_classes.py  stream_logs.py
package/tests/: conftest.py  test_cli.py  test_dbt_server_detector.py  test_integration.py  test_stream_logs.py
package/tests/integration/: test_integration.py
server/: Dockerfile  config.py  main.py  requirements.txt
server/lib/: artifacts.py  dbt_executor.py  dbt_server.py  logger.py  models.py
src/dbt_remote/: README.md  cli.py  server_response_classes.py  stream_logs.py
src/dbt_server/: README.md  cli.py  clients.py  config.py  dbt_run_job.py  dbt_server.py  job.py  server.py
terraform/: main.tf  output.tf  provider.tf  service-accounts.tf  variables.tf
terraform/gcp/: main.tf  output.tf  service-accounts.tf  variables.tf
test-files/: manifest.json  profiles.yml
test-files/elementary/: dbt_project.yml  manifest.json  packages.yml
test-files/fail/: manifest.json
tests/: conftest.py  schedules.yaml  test_end_to_end.py
tests/dbt_remote/: conftest.py  test_cli.py  test_stream_logs.py
tests/test-files/: dbt_project.yml
(+106 files in other folders)
