[tool.poetry]
name = "dbt-server"
version = "2.0.0-rc.1"
description = "An extension for the dbt CLI that allows deploying and running jobs remotely"
authors = ["Alexis VIALARET <alexis.vialaret@artefact.com>", "Samy DOUGUI <samy.dougui@artefact.com>"]
license = "Apache2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-bigquery = "^1.8"
python-multipart = "^0"
humanize = "^4"
google-cloud-iam = "^2"
google-cloud-compute = "^1"
google-cloud-run = "^0"
google-cloud-resource-manager = "^1"
google-api-python-client = "^2"
uvicorn = "^0"
fastapi = "^0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
